testdata/s1/want-static.yaml
# Generated by esgw. DO NOT EDIT.
# config_version: 5ab63a1e2b84
admin:
  address:
    pipe:
      path: /tmp/esgw-admin.sock
node:
  cluster: esgw
  id: esgw
  metadata:
    esgw.config_version: 5ab63a1e2b84
static_resources:
  clusters:
    - connect_timeout: 5s
      load_assignment:
        cluster_name: us/blog-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4000
      name: us/blog-app
      type: STATIC
    - connect_timeout: 5s
      load_assignment:
        cluster_name: us/www-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
      name: us/www-app
      type: STATIC
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/http
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/http-redirect
                      routes:
                        - match:
                            prefix: /
                          redirect:
                            scheme_redirect: https
                server_name: esgw
                stat_prefix: lis/http
      name: lis/http
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filter_chain_match:
            server_names:
              - www.example.com
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http2_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/https
                  virtual_hosts:
                    - domains:
                        - blog.example.com
                      name: vh/blog
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/blog-app
                            timeout: 15s
                    - domains:
                        - www.example.com
                      name: vh/www
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/www-app
                            timeout: 15s
                server_name: esgw
                stat_prefix: lis/https
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - h2
                  - http/1.1
                tls_certificates:
                  - certificate_chain:
                      filename: testdata/certs/www.crt
                    private_key:
                      filename: testdata/certs/www.key
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
        - filter_chain_match:
            server_names:
              - blog.example.com
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http2_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/https
                  virtual_hosts:
                    - domains:
                        - blog.example.com
                      name: vh/blog
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/blog-app
                            timeout: 15s
                    - domains:
                        - www.example.com
                      name: vh/www
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/www-app
                            timeout: 15s
                server_name: esgw
                stat_prefix: lis/https
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                  - h2
                  - http/1.1
                tls_certificates:
                  - certificate_chain:
                      filename: testdata/certs/blog.crt
                    private_key:
                      filename: testdata/certs/blog.key
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
      name: lis/https
