testdata/s1/want-xds.json
{
  "clusters": {
    "us/blog-app": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/blog-app",
      "type": "EDS"
    },
    "us/www-app": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/www-app",
      "type": "EDS"
    }
  },
  "endpoints": {
    "us/blog-app": {
      "cluster_name": "us/blog-app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 4000
                  }
                }
              }
            }
          ]
        }
      ]
    },
    "us/www-app": {
      "cluster_name": "us/www-app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 3000
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "listeners": {
    "lis/http": {
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 80
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/http"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/http",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ]
        }
      ],
      "name": "lis/http"
    },
    "lis/https": {
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 443
        }
      },
      "filter_chains": [
        {
          "filter_chain_match": {
            "server_names": [
              "www.example.com"
            ]
          },
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http2_protocol_options": {},
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/https"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/https",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ],
          "transport_socket": {
            "name": "envoy.transport_sockets.tls",
            "typed_config": {
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
              "common_tls_context": {
                "alpn_protocols": [
                  "h2",
                  "http/1.1"
                ],
                "tls_certificate_sds_secret_configs": [
                  {
                    "name": "crt/https/0",
                    "sds_config": {
                      "ads": {}
                    }
                  }
                ],
                "tls_params": {
                  "tls_minimum_protocol_version": "TLSv1_2"
                }
              }
            }
          }
        },
        {
          "filter_chain_match": {
            "server_names": [
              "blog.example.com"
            ]
          },
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http2_protocol_options": {},
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/https"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/https",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ],
          "transport_socket": {
            "name": "envoy.transport_sockets.tls",
            "typed_config": {
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
              "common_tls_context": {
                "alpn_protocols": [
                  "h2",
                  "http/1.1"
                ],
                "tls_certificate_sds_secret_configs": [
                  {
                    "name": "crt/https/1",
                    "sds_config": {
                      "ads": {}
                    }
                  }
                ],
                "tls_params": {
                  "tls_minimum_protocol_version": "TLSv1_2"
                }
              }
            }
          }
        }
      ],
      "listener_filters": [
        {
          "name": "envoy.filters.listener.tls_inspector",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
          }
        }
      ],
      "name": "lis/https"
    }
  },
  "routes": {
    "rc/http": {
      "name": "rc/http",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/http-redirect",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "redirect": {
                "scheme_redirect": "https"
              }
            }
          ]
        }
      ]
    },
    "rc/https": {
      "name": "rc/https",
      "virtual_hosts": [
        {
          "domains": [
            "blog.example.com"
          ],
          "name": "vh/blog",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/blog-app",
                "timeout": "15s"
              }
            }
          ]
        },
        {
          "domains": [
            "www.example.com"
          ],
          "name": "vh/www",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/www-app",
                "timeout": "15s"
              }
            }
          ]
        }
      ]
    }
  },
  "secrets": {
    "crt/https/0": {
      "name": "crt/https/0",
      "tls_certificate": {
        "certificate_chain": {
          "filename": "testdata/certs/www.crt"
        },
        "private_key": {
          "filename": "testdata/certs/www.key"
        }
      }
    },
    "crt/https/1": {
      "name": "crt/https/1",
      "tls_certificate": {
        "certificate_chain": {
          "filename": "testdata/certs/blog.crt"
        },
        "private_key": {
          "filename": "testdata/certs/blog.key"
        }
      }
    }
  },
  "version": "1b33a7f7cdd9"
}
